# ChangeLog for games-emulation/kvisualboyadvance
# Copyright 2000-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/games-emulation/kvisualboyadvance/ChangeLog,v 1.9 2007/02/21 23:23:18 peper Exp $

  21 Feb 2007; Piotr Jaroszyński <peper@gentoo.org> ChangeLog:
  Transition to Manifest2.

  06 Jul 2006; Simon Stelling <blubb@gentoo.org>
  kvisualboyadvance-0.3.1.ebuild:
  stable on amd64

  11 Nov 2004; Joseph Jezak <josejx@gentoo.org>
  kvisualboyadvance-0.3.1.ebuild:
  Marked ppc stable.

  04 Jul 2004; Carsten Lohrke <carlo@gentoo.org>
  kvisualboyadvance-0.3.1.ebuild:
  QA: need-kde after R/DEPEND

  30 Apr 2004; David Holm <dholm@gentoo.org> kvisualboyadvance-0.3.1.ebuild:
  Added to ~ppc.

  15 Apr 2004; Michael Sterrett <mr_bones_@gentoo.org>
  kvisualboyadvance-0.3.1.ebuild:
  needs qt-3.2 according to bug #47973

*kvisualboyadvance-0.3.1 (30 Mar 2004)

  30 Mar 2004; Michael Sterrett <mr_bones_@gentoo.org>
  kvisualboyadvance-0.3.1.ebuild, metadata.xml:
  initial commit; ebuild submitted by Diego Pettenò via bug #40155
