@@ -1,6 +1,9 @@
 # ChangeLog for games-emulation/xmame
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/games-emulation/xmame/ChangeLog,v 1.73 2009/05/25 23:56:18 nyhm Exp $
+# $Header: /var/cvsroot/gentoo-x86/games-emulation/xmame/ChangeLog,v 1.74 2009/11/10 21:10:27 ssuominen Exp $
+
+  10 Nov 2009; Samuli Suominen <ssuominen@gentoo.org> xmame-0.106.ebuild:
+  Remove USE arts (deprecated).
 
   25 May 2009; Tristan Heaven <nyhm@gentoo.org> xmame-0.106.ebuild:
   Always use system expat, bug #251107
