@@ -1,6 +1,9 @@
 # ChangeLog for games-emulation/xmess
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/games-emulation/xmess/ChangeLog,v 1.63 2009/03/27 22:30:25 jer Exp $
+# $Header: /var/cvsroot/gentoo-x86/games-emulation/xmess/ChangeLog,v 1.64 2009/11/10 21:12:23 ssuominen Exp $
+
+  10 Nov 2009; Samuli Suominen <ssuominen@gentoo.org> xmess-0.106.ebuild:
+  Remove USE arts (deprecated).
 
   27 Mar 2009; Jeroen Roovers <jer@gentoo.org> xmess-0.83.1.ebuild,
   xmess-0.106.ebuild:
