@@ -1,6 +1,10 @@
 # ChangeLog for games-emulation/kvisualboyadvance
-# Copyright 2000-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/games-emulation/kvisualboyadvance/ChangeLog,v 1.9 2007/02/21 23:23:18 peper Exp $
+# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/games-emulation/kvisualboyadvance/ChangeLog,v 1.10 2009/11/10 21:17:13 ssuominen Exp $
+
+  10 Nov 2009; Samuli Suominen <ssuominen@gentoo.org>
+  kvisualboyadvance-0.3.1.ebuild:
+  Remove USE arts (deprecated).
 
   21 Feb 2007; Piotr Jaroszyński <peper@gentoo.org> ChangeLog:
   Transition to Manifest2.
